--- a/index.html
+++ b/index.html
@@ -87,8 +87,15 @@
             <p class="m-0" style="letter-spacing: 1px;">SADEE MUHAMMAD ZAKARIA</p>
             <p class="m-0" style="font-size: 13px;">Creative IT Institute</p>
             <p class="m-0">MERN-2404</p>
-
           </div>
+        </section>
+        <section class="skinCollection position-absolute p-3 d-flex w-100 justify-content-between" id="skinCollection">
+          <div class="skinCollection__item" style="background: linear-gradient(40deg, #0a3c49 0%, #000851 100%);"></div>
+          <div class="skinCollection__item" style="background: linear-gradient(40deg, #9ebd13 0%, #008552 100%);"></div>
+          <div class="skinCollection__item" style="background: linear-gradient(40deg, #d53369 0%, #daae51 100%);"></div>
+          <div class="skinCollection__item" style="background: linear-gradient(40deg, #0700b8 0%, #00ff88 100%);"></div>
+          <div class="skinCollection__item" style="background: linear-gradient(40deg, #00d2ff 0%, #3a47d5 100%);"></div>
+          <div class="skinCollection__item" style="background: linear-gradient(40deg, #FC466B 0%, #3F5EFB 100%);"></div>
         </section>
         <!-- =============================Control Markup=============================== -->
         <!-- **===========================Playlist Page ================================**-->
